--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <h2 class="popup__head">Редактировать профиль</h2>
           <input class="popup__item" name="firstname" placeholder="Жак-Ив Кусто" required>
           <input class="popup__item" name="firstoccupation" placeholder="Исследователь океана" required>
-          <button type="button" class="popup__button-save" id="edit__button" type="submit">Сохранить</button>
+          <button type="button" class="popup__button-save" id="edit__button">Сохранить</button>
         </form>
       </div>
     </div>
