--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <p class="info__subtitle">Исследователь океана</p>
       </div>
-      <button class="profile__button"></button>
+      <button type="button" class="profile__button"></button>
     </section>
     <div class="popup">
       <div class="popup__box">
@@ -30,7 +30,7 @@
           <h2 class="popup__head">Редактировать профиль</h2>
           <input class="popup__item" name="firstname" placeholder="Жак-Ив Кусто" required>
           <input class="popup__item" name="firstoccupation" placeholder="Исследователь океана" required>
-          <button type="button" class="popup__button-save" id="edit__button">Сохранить</button>
+          <button type="submit" class="popup__button-save" id="edit__button">Сохранить</button>
         </form>
       </div>
     </div>
